<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="eg.com.test.vatask.ui.mainActivity.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_20">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edttextFirstNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_26"
                android:gravity="start"
                android:hint="@string/first_number"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextInputLayoutErrorStyle"
                app:errorTextColor="@color/black"
                app:expandedHintEnabled="true"
                app:hintEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_40"
                    android:background="@color/white"
                    android:gravity="start"
                    android:inputType="number"
                    android:padding="@dimen/padding_10"
                    android:text="@={viewModel.firstNumber}"
                    android:textSize="@dimen/font_size_16"
                    app:addTextChangedListener="@{viewModel.firstNumberTextWatcher}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edttextSecondNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:gravity="start"
                android:hint="@string/second_number"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextInputLayoutErrorStyle"
                app:errorTextColor="@color/black"
                app:expandedHintEnabled="true"
                app:hintEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_40"
                    android:gravity="start"
                    android:background="@color/white"
                    android:inputType="number"
                    android:padding="@dimen/padding_10"
                    android:text="@={viewModel.secondNumber}"
                    android:textSize="@dimen/font_size_16"
                    app:addTextChangedListener="@{viewModel.secondNumberTextWatcher}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edttextOperator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_15"
                android:clickable="true"
                android:focusable="false"
                android:gravity="start"
                android:hint="@string/operator"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextInputLayoutErrorStyle"
                app:errorTextColor="@color/black"
                app:expandedHintEnabled="true"
                app:hintEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_40"
                    android:clickable="true"
                    android:focusable="false"
                    android:gravity="start"
                    android:inputType="text"
                    android:background="@color/white"
                    android:onClick="@{()->viewModel.observer.selectOperator()}"
                    android:padding="@dimen/padding_10"
                    android:text="@={viewModel.operator}"
                    android:textSize="@dimen/font_size_16"
                    app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edttextDelayTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:gravity="start"
                android:hint="@string/delay_time_in_seconds"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextInputLayoutErrorStyle"
                app:errorTextColor="@color/purple_500"
                app:expandedHintEnabled="true"
                app:hintEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding_40"
                    android:gravity="start"
                    android:inputType="number"
                    android:background="@color/white"
                    android:padding="@dimen/padding_10"
                    android:text="@={viewModel.delayTime}"
                    android:textSize="@dimen/font_size_16"
                    app:addTextChangedListener="@{viewModel.delayTimeTextWatcher}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/radiobuttonEnglishSettingActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:checked="@={viewModel.isGetMyLocation()}"
                android:padding="@dimen/padding_8"
                android:text="@string/gps"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font_size_16"
               />


            <TextView
                android:id="@+id/tvCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/padding_60"
                android:background="@color/black"
                android:onClick="@{()->viewModel.onButtonCalculateClicked()}"
                android:padding="@dimen/padding_10"
                android:layout_margin="@dimen/padding_50"
                android:gravity="center"
                android:src="@drawable/ic_baseline_add_24"
                app:tint="@color/white"
                android:text="@string/calculate"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_16" />

        </LinearLayout>
    </ScrollView>
</layout>